--- a/src/css/Pokedex.css
+++ b/src/css/Pokedex.css
@@ -15,6 +15,11 @@
   margin: 30px 0;
 }
 
+.scorelist-wrapper .container {
+  display: grid;
+  justify-content: center;
+}
+
 .game-wrapper {
   height: 100%;
   width: 100vw;
